--- a/socialtech/style.css
+++ b/socialtech/style.css
@@ -18,7 +18,8 @@ body {
 /* ヘッダー */
 header {
   display: flex;
-  justify-content: space-between; /*均等配置 最初のアイテムは先頭に寄せ、最後のアイテムは末尾に寄せる*/
+  justify-content: space-between; 
+  /*↑↑均等配置 最初のアイテムは先頭に寄せ、最後のアイテムは末尾に寄せる*/
 }
 
 /* ナビゲーションのレイアウト */
@@ -32,17 +33,21 @@ header {
   text-decoration: none;
   margin-left: 20px;
 }
-#nav-pc > a:link {  /*未訪問のリンク*/
+/*未訪問のリンク*/
+#nav-pc > a:link {
   color: #0d0d0d;
 }
-#nav-pc > a:visited {   /*訪問済みのリンク*/
+/*訪問済みのリンク*/
+#nav-pc > a:visited {
   color: #0d0d0d;
 }
-#nav-pc > a:hover {    /*マウスのカーソルが乗っているとき*/
-  /* color: #0d0d0d; */
+/*マウスのカーソルが乗っているとき*/
+#nav-pc > a:hover {
+  color: #0d0d0d;
   text-decoration: underline;
 }
-#nav-pc > a:active {   /*アクティブ状態（マウスを左クリックしてから離すまで）のとき*/
+/*アクティブ状態（マウスを左クリックしてから離すまで）のとき*/
+#nav-pc > a:active {
   color: #0d0d0d;
 }
 
@@ -54,16 +59,20 @@ header {
 }
 
 #main-message {
-  position: absolute;  /*親要素を基準にした絶対位置で配置するための指定*/
+  position: absolute;
+  /*absolute　親要素を基準にした絶対位置で配置するための指定*/
   top: 0;
-  left: 0;  /*親要素の左上に配置される*/
+  left: 0;  
+  /*親要素の左上に配置される*/
   background-color: #2710d5;
   color: #ffffff;
-  border-radius: 0 0 476px 0;  /*要素を角丸にする「border-radius：左上 右上 右下 左下;」radius₌半径*/
+  border-radius: 0 0 476px 0; 
+  /*要素を角丸にする「border-radius：左上 右上 右下 左下;」radius₌半径*/
   max-width: 620px;
   height: 100%;
   width: 100%;
-  z-index: 11;  /*要素の重なり順を指定する。要素ごとに数字を指定することで、大きい数字を指定した要素が上に重なる*/
+  z-index: 11;  
+  /*z-index₌要素の重なり順を指定する。要素ごとに数字を指定することで、大きい数字を指定した要素が上に重なる*/
 }
 
 #main-message > h1 {
@@ -82,7 +91,239 @@ header {
   border-radius: 476px 0 0 0;
   position: absolute;
   top: 0;
-  right: 0;  /*親要素の右上に配置される*/
+  right: 0;
+  /*親要素の右上に配置される*/
   z-index: 10;
 }
 
+/* MISSION */
+h2 {
+  margin: 40px 0 0 0;
+}
+
+h2::after {
+  content: url("images/line.png");
+  /* 疑似要素（::after）要素の直後に画像を追加できる（::beforeの場合は直前）。疑似要素で画像を追加する場合は、content: url("画像パス"); */
+  margin-left: 10px;
+}
+
+h3 {
+  font-size: 27px;
+}
+
+#mission {
+  margin: 80px auto;
+  /* 80px auto 80px auto; */
+  width: 100%;
+}
+
+#mission-flex {
+  width: 100%;
+  display: flex;  
+  /* 表示方法（display）：flexを指定して、子要素(div右・左)を横並びにする */
+}
+
+#mission-flex > div {
+  /* 右エリアと左エリアのdiv両方を指す */
+  width: 50%;
+  /* ↑2つのdiv要素をちょうど半分に分ける */
+  margin: 20px;
+}
+
+#mission-photo {
+  width: 100%;
+  /* 親要素(50%に設定した左のdiv)の幅いっぱいに広げる */
+}
+
+#s2dgs {
+  margin-top: 50px;
+  width: 100%;
+}
+
+/* PRODUCT */
+#product{
+  background-color: #fafafa;
+  margin: 80px 0;
+  padding: 10px 40px 0px 40px;
+}
+
+/* 外枠(親要素) */
+#product > div {
+  margin-top: 40px;
+  display: flex;
+}
+
+#product-left {
+  width: 50%;
+  margin-right: 20px;
+}
+
+#product-right {
+  width: 50%;
+  margin: 80px 0 0 20px;
+  /* margin-left: 20px;
+     margin-top: 80px; */
+}
+
+#product-left > div {
+  position: relative;
+  height: 480px;
+  margin-right: 20px;
+}
+
+#product-right >div {
+  position: relative;
+  height: 480px;
+  margin-left: 20px;
+}
+
+/* 画像 */
+.product-photo {
+  width: 100%;
+  /* 親のdiv要素からはみ出さないように 親要素の幅に合わせる*/
+}
+
+/* 画像下の説明文の枠 */
+.product-explain {
+  background-color: #ffffff;
+  position: absolute;
+  left: 0;
+  top: 280px;
+  margin: 0 40px;
+  padding: 20px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.05);;
+  /* 右方向の長さ　下方向　影のぼけ具合　影の色 ※要素に影をつける時につかう*/
+}
+
+.product-explain > span {
+  color: #2710d5;
+  font-weight: bold;
+  font-size: 16px;
+  margin: 0;
+}
+
+.product-explain > h3 {
+  font-size: 20px;
+  margin: 5px 0 5px 0;
+}
+
+.product-explain > p {
+  font-size: 14px;
+  margin: 0;
+}
+
+/* 「もっとみる」ボタン */
+#product-more {
+  margin: 0 auto -42px auto;
+  /* marginにマイナスの値を指定すると、親要素の外にはみ出す */
+}
+
+/* ABOUT US */
+#aboutus {
+  margin: 80px auto;
+}
+
+/* 3つの組織文化と画像を入れる枠 */
+#aboutus > div {
+  display: flex;
+}
+
+/* div内の画像 */
+.culture-img {
+  width: 100%;
+  align-self: flex-start;
+  /* 縦方向の揃え方（align-self）：flex-start（上寄せ） */
+}
+
+.culture-img2 {
+  margin-top: 50px;
+  width: 100%;
+}
+
+/* 表 */
+.culture-table {
+  margin-right: 50px;
+}
+
+.culture-num {
+  font-size: 80px;
+  color: #2710d5;
+  margin-right: 20px;
+}
+
+.culture-en {
+  color: #2710d5;
+  font-weight: bold;
+  font-size: 24px;
+  display: block;
+  /* 見出しを縦並びにするため、blockを指定する */
+}
+
+.culture-jp {
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.culture-description {
+  margin: 0;
+}
+
+/* vision */
+#vision {
+  margin: 80px auto;
+}
+
+#vision > div {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  /* 横方向の揃え方（justify-content）一番左と一番右の子要素を両端に配置して、残りの子要素を均等な間隔で配置する */
+  flex-wrap: wrap;
+  /* 折り返し（flex-wrap）幅が足りなくなったら上から下に折り返しする */
+}
+
+.vision-box {
+  width: 300px;
+  height: 300px;
+  margin-bottom: 30px;
+  position: relative;
+  /* 現在の位置を基準に相対的な位置に配置する */
+}
+
+.vision-box > img {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  /* ↑親要素の左上に配置する */
+  z-index: 30;
+}
+
+.vision-box > span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 31;
+  margin-right: 20px;
+}
+
+.vision-box > span > h4 {
+  color: #2710d5;
+  font-size: 19px;
+  margin-top: 80px;
+}
+
+.vision-box > span > h4::first-letter {
+  font-size: 40px;
+  /* 疑似要素（::first-letter）を使って1文字目だけに40pxを指定する */
+}
+
+.vision-box > span > h5 {
+  font-size: 20px;
+  margin: 0;
+}
+
+.vision-box > span > p {
+  margin-top: 10px;
+}
