--- a/socialtech/style.css
+++ b/socialtech/style.css
@@ -504,7 +504,108 @@ footer {
   float: right;
   /* 要素の並び（float）=rightを指定して、フッターの中で右寄せにする */
 }
+
+/* mission.html用スタイル */
+/* ミッションのメインビジュアル */
+#mission-main {
+  height: 496px;
+  width: 100%;
+  background-image: url(images/mission/mission-main.png);
+  background-repeat: no-repeat;
+  background-position-y: center;
+  /* 背景のy軸（縦方向）の位置（background-position-y）：centerを指定→→→縦方向の中央に配置する */
 }
+
+#mission-title {
+  background-color: #2710d5;
+  width: 368px;
+  color: #ffffff;
+  /* 文字色 */
+  height: 496px;
+  border-radius: 0 248px 248px 0;
+  position: relative;
+}
+
+#mission-title > h1 {
+  position: absolute;
+  top: 0;
+  left: 100px;
+  font-size: 80px;
+}
+
+#mission-title > span {
+  position: absolute;
+  top: 200px;
+  left: 100px;
+  font-size: 26px;
+}
+
+#mission-title > div {
+  position: absolute;
+  top: 350px;
+  left: 100px;
+  font-size: 16px;
+}
+
+
+#mission-s2dgs {
+  width: 100%;
+  margin: 20px;
+}
+
+.mission-h2 {
+  color: #2710d5;
+  font-size: 40px;
+}
+
+.mission-h2::after {
+  content: none;
+  /* 追加していた青線を削除する */
+}
+
+#mission-5goals {
+  margin: 20px;
+  display: flex;
+  /* 要素をFlexbox化する */
+}
+
+#mission-5goals > div {
+  flex-grow: 1;
+  padding: 20px;
+}
+
+#mission-5goals > div > div {
+  margin-bottom: 40px;
+}
+
+.fivegoals-image-right { 
+  float: right;
+  /* 要素の並びを右寄せにする */
+  margin: 20px;
+}
+
+.fivegoals-image-left {
+  float: left;
+  margin: 20px;
+}
+
+.fivegoals-number {
+  color: #2710d5;
+  font-size: 48px;
+  margin: 0;
+}
+
+.fivegoals-h3 {
+  font-size: 28px;
+  margin: 0;
+}
+
+.fivegoals-p {
+  margin: 0;
+}
+}
+
+
 
 /* スマートフォン用のスタイル */
 @media screen and (max-width: 767px) {
@@ -960,4 +1061,100 @@ footer {
     margin-top: 30px;
     color: #ffffff;
   }
+
+  /* mission.html用スタイル */
+   /* ミッションのメインビジュアル */
+   #mission-main {
+    height: 256px;
+    width: 100%;
+    background-image: url("images/mission/mission-main.png");
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-size: auto 208px;
+    /* 幅にauto、高さに208px */
+  }
+
+  #mission-title {
+    background-color: #2710d5;
+    width: 136px;
+    color: #ffffff;
+    height: 256px;
+    border-radius: 0 248px 248px 0;
+    position: relative;
+  }
+  #mission-title > h1 {
+    position: absolute;
+    top: 0;
+    left: 20px;
+    font-size: 40px;
+  }
+
+  #mission-title > span {
+    position: absolute;
+    top: 110px;
+    left: 20px;
+    font-size: 18px;
+  }
+
+  #mission-title > div {
+    position: absolute;
+    top: 180px;
+    left: 20px;
+    font-size: 13px;
+  }
+
+  /* ミッションページ　S2DGSの設定 */
+  #mission-s2dgs {
+    margin: 20px;
+  }
+
+  .mission-h2 {
+    color: #2710d5;
+    font-size: 38px;
+    margin: 0px;
+  }
+
+  .mission-h2::after {
+    content: none;
+  }
+
+  #mission-s2dgs > img {
+    width: 100%;
+  }
+
+  #mission-5goals {
+    margin: 20px;
+  }
+
+  #mission-5goals > div > div {
+    margin-bottom: 40px;
+  }
+
+  #s2dgs-image {
+    width: 100%;
+  }
+  .fivegoals-image-right {
+    margin: 20px auto 20px auto;
+    display: block;
+  }
+
+  .fivegoals-image-left {
+    margin: 20px auto 20px auto;
+    display: block;
+  }
+
+  .fivegoals-number {
+    color: #2710d5;
+    font-size: 48px;
+    margin: 0;
+  }
+
+  .fivegoals-h3 {
+    font-size: 28px;
+    margin: 0;
+  }
+  .fivegoals-p {
+    margin: 0;
+  }
 }
+
