--- a/socialtech/style.css
+++ b/socialtech/style.css
@@ -336,6 +336,48 @@ h3 {
   margin-top: 10px;
 }
 
+
+/* CASES */
+#cases {
+  margin: 40px auto;
+  width: 100%;
+}
+
+#cases>ul {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+}
+
+#cases>ul>li {
+  width: 33%;
+  margin: 20px;
+}
+
+.case-card {
+  background-color: #ffffff;
+  min-height: 400px;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+.case-img {
+  width: 100%;
+}
+
+.case-info {
+  padding: 10px 20px;
+}
+
+.case-name {
+  color: #2710d5;
+  font-size: 19px;
+}
+
+.case-content {
+  font-size: 14px;
+}
+
+
 /* COMPANY */
 #company {
   margin: 80px auto;
@@ -603,7 +645,102 @@ footer {
 .fivegoals-p {
   margin: 0;
 }
+
+/* プロダクトページ */
+#product-main {
+  height: 496px;
+  width: 100%;
+  background-image: url(images/product/product-main.png);
+  background-repeat: no-repeat;
+  background-position-y: center;
 }
+
+#product-title {
+  background-color: #2710d5;
+  width: 368px;
+  color: #fff;
+  height: 496px;
+  border-radius: 0 248px 248px 0;
+  position: relative;
+}
+
+#product-title > h1 {
+  position: absolute;
+  top: 0;
+  left: 100px;
+  font-size: 80px;
+}
+
+#product-title > span {
+  position: absolute;
+  top: 200px;
+  left: 100px;
+  font-size: 26px;
+}
+
+#product-title > div {
+  position: absolute;
+  top: 350px;
+  left: 100px;
+  font-size: 16px;
+}
+
+.product-section1 {
+  position: relative;
+  margin: 20px;
+  height: 340px;
+}
+
+.product-section1 > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 450px;
+  margin: 0 40px 30px 0;
+  border-radius: 0 432px 0 0;
+}
+
+.product-section1 > div {
+  position: absolute;
+  top: 0;
+  left: 480px;
+}
+
+.product-section2 {
+  position: relative;
+  margin: 20px;
+  height: 340px;
+}
+
+.product-section2 > img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 450px;
+  margin: 0 0 30px 40px;
+  border-radius: 432px 0 0 0;
+}
+
+.product-section2 > div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 500px;
+}
+
+.product-h2 {
+  color: #2710d5;
+  font-size: 24px;
+  margin: 0;
+}
+
+.product-h3 {
+  font-size: 28px;
+  margin: 0;
+}
+}
+
+
 
 
 
@@ -1156,5 +1293,107 @@ footer {
   .fivegoals-p {
     margin: 0;
   }
+
+
+  /* PRODUCT */
+  #product-main {
+    height: 256px;
+    width: 100%;
+    background-image: url(images/product/product-main.png);
+    background-repeat: no-repeat;
+    background-position-y: center;
+    background-size: auto 208px; 
+  }
+
+  #product-title {
+    background-color: #2710d5;
+    width: 136px;
+    color: #fff;
+    height: 256px;
+    border-radius: 0 248px 248px 0;
+    position: relative;
+  }
+
+  #product-title > h1 {
+    position: absolute;
+    top: 0;
+    left: 20px;
+    font-size: 40px;
+  }
+
+  #product-title > span {
+    position: absolute;
+    top: 110px;
+    left: 20px;
+    font-size: 18px;
+  }
+
+  #product-title > div {
+    position: absolute;
+    top: 180px;
+    left: 20px;
+    font-size: 13px;
+  }
+
+  .product-section1 {
+    margin: 20px;
+  }
+
+  .product-section1 > img {
+    width: 100%;
+    border-radius: 0 300px 0 0;
+  }
+  
+  .product-section2 {
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .product-section2 > img {
+    order: 1;
+    width: 100%;
+    border-radius: 300px 0 0 0;
+  }
+
+  .product-section2 > div {
+    order: 2;
+  }
+
+  .product-h2 {
+    color: #2710d5;
+    font-size: 24px;
+    margin: 0;
+  }
+
+  .product-h3 {
+    font-size: 28px;
+    margin: 0;
+  }
+
+  /* CASES */
+  #cases {
+    margin: 20px;
+    width: 100%;
+  }
+
+  .case-img {
+    width: 100%;
+    
+  }
+
+  #cases>ul {
+    list-style: none;
+  }
+  
+  #cases>ul>li {
+    width: 100%;
+  }
+
+  .case-card {
+    width: 100%;
+    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.2);
+  }
+
 }
 
